# hitl-daemon

./: .release-filter.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml
crates/mavlink-io/: Cargo.toml
crates/mavlink-io/src/: async_io.rs  codec.rs  heartbeat.rs  lib.rs  messages.rs  serial.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: lib.rs  loop_runner.rs  state.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: lib.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: build_config.rs  handler.rs  lib.rs  protocol.rs  server.rs
src/: main.rs  tui.rs
