[package]
name = "hitl-daemon"
version = "0.9.0"
edition = "2021"
description = "Hardware-in-the-loop simulator daemon for UAV testing"
license = "MIT"

[dependencies]
mavlink-io = { path = "crates/mavlink-io" }
protocol = { path = "crates/protocol" }
simulation = { path = "crates/simulation" }
websocket = { path = "crates/websocket" }
hitl-physics = { path = "../hitl-physics" }
hitl-sensors = { path = "../hitl-sensors" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
ratatui = "0.28"
crossterm = "0.28"
atty = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
mavlink = { workspace = true }

[workspace]
resolver = "2"
members = [".", "crates/mavlink-io", "crates/protocol", "crates/simulation", "crates/websocket"]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serialport = "4.3"
mavlink = { version = "0.13", features = ["ardupilotmega"] }
tokio-serial = "5.4"
nalgebra = "0.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "=4.4.18", features = ["derive"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
spin_sleep = "1.2"
axum = "0.7"
tokio-tungstenite = "0.23"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
