[package]
name = "simulation"
version = "0.1.0"
edition = "2021"
description = "HITL simulation loop integrating physics and sensors"

[dependencies]
hitl-physics = { path = "../../../hitl-physics" }
hitl-sensors = { path = "../../../hitl-sensors" }
protocol = { path = "../protocol" }
mavlink = { workspace = true }
nalgebra = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = "0.12"
spin_sleep = "1.2"
tracing = { workspace = true }
