[package]
name = "websocket"
version = "0.1.0"
edition = "2021"
description = "WebSocket server for HITL daemon browser communication"
license = "MIT"

[dependencies]
protocol = { path = "../protocol" }
hitl-physics = { path = "../../../hitl-physics" }
hitl-sensors = { path = "../../../hitl-sensors" }
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
crossbeam-channel = { workspace = true }
mavlink = { workspace = true }
